save logs to mongodb
